# cuda_multiDDM

./: .gitignore  README.md
generate_param/: generate_param.py
plotting/: plot.ipynb  plot_non_ave.ipynb  plot_non_ave_matlab.ipynb  plot_with_lambda.ipynb
resources/example1/: lambda_vector.txt  parameters.txt  q_vector.txt  run_example  run_plot  scale_vector.txt
resources/example2/: met_plot.py  plot_metronomes.py  run_example  tau_vector.txt
resources/python_tools/: data_transfer_speed_test.py  plot_averaged.py  plot_grid.py  plot_matlab.py
src/: CMakeCache.txt  CMakeLists.txt  DDM.cu  DDM_kernel.cuh  Makefile  azimuthal_average.cu  azimuthal_average.cuh  azimuthal_average_kernel.cuh  cmake_install.cmake  constants.hpp  debug.cpp  debug.hpp  main  main.cpp  reduction.cu  reduction.h  run.sh  run_ddm.sh  video_deshake.sh  video_processing.sh  video_reader.cpp  video_reader.hpp
video_preprocessing/: reduce_resolution.py
